--- a/styles/style.css
+++ b/styles/style.css
@@ -144,16 +144,6 @@ ol {
   overflow: hidden;
 }
 
-.visually-hidden-checkbox {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-}
-
 .search-form__checkbox-list {
   display: flex;
   height: 27px;
@@ -205,7 +195,8 @@ ol {
 
 .content__details {
   display: flex;
-  width: 399px;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 26px;
@@ -269,10 +260,10 @@ ol {
 
 .content__video-card-description-container {
   display: flex;
-  width: 200px;
-flex-direction: column;
-align-items: flex-start;
-gap: 6px;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 6px;
 }
 
 .content__video-card-title {
@@ -308,4 +299,22 @@ gap: 6px;
   width: 399px;
   height: 34px;
   background-color: transparent;
+}
+
+.preloader-template {
+  width: 711px;
+  height: 386px;
+  background-color: aqua;
+}
+
+.preloader {
+  display: flex;
+  width: 711px;
+  height: 386px;
+  position: fixed;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+  margin-top: 212px;
+  margin-left: 30px;
 }
