--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,20 @@ html {
   block-size: 100%;
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: auto;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
+}
+
 h1,
 h2,
 h3,
@@ -27,44 +41,32 @@ ol {
   list-style: none;
 }
 
-.page {
-  display: inline-flex;
-  padding: 133px 30px;
-  flex-direction: column;
-  align-items: center;
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: 0 auto;
-  color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
-}
-
 .content {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: flex-end;
+  width: 100%;
   gap: 30px;
-  padding-bottom: 133px;
   flex-direction: row;
 }
 
 .result {
   display: flex;
-  width: 711px;
+  width: 100%;
   height: 456px;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
 }
 
 .result__video-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  align-items: flex-start;
+  width: 711px;
   height: 386px;
+  margin-bottom: 16px;
+  position: relative;
 }
 
 .result__video {
@@ -74,10 +76,10 @@ ol {
 }
 
 .search-form {
-  display: flex;
+  display: inline-flex;
+  justify-content: flex-start;
   align-items: flex-end;
   gap: 40px;
-  width: 711px;
 }
 
 .search-form__fieldset {
@@ -89,9 +91,9 @@ ol {
 }
 
 .search-form__fieldset-title {
-  color: #fff;
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
+  color: inherit;
+  font-family: inherit, sans-serif;
+  font-size: inherit;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -104,25 +106,33 @@ ol {
   flex-direction: row;
 }
 
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
 .search-form__label-text {
-  color: #fff;
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
+  color: inherit;
+  font-family: inherit, sans-serif;
+  font-size: inherit;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  cursor: pointer;
+  appearance: none;
 }
 
 .search-form__textfield {
   display: flex;
   width: 225px;
   height: 27px;
-  padding-right: 14px;
   align-items: center;
   padding-left: 0;
-  color: rgba(255, 255, 255, 0.7);
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  color: inherit;
+  font-family: inherit, sans-serif;
+  font-size: inherit;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -133,15 +143,27 @@ ol {
   background-color: transparent;
 }
 
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
 .visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
   overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
 
 .search-form__checkbox-list {
@@ -152,36 +174,70 @@ ol {
   gap: 15px;
 }
 
-.search-form__checkbox {
-  width: 19px;
-  height: 19px;
-  background-color: #fff;
+.search-form__checkbox-list:hover {
+  text-decoration: underline;
 }
 
-.search-form__pseudo-checkbox {
+.search-form__checkbox + .search-form__pseudo-checkbox {
   width: 19px;
   height: 19px;
   border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.search-form__checkbox:disabled + .search-form__pseudo-checkbox {
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  cursor: pointer;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox {
-  background-color: #fff;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  background: #fff;
+  box-shadow: 0px 0px 0px 2px #000 inset;
 }
 
 .search-form__checkbox:focus-visible + .search-form__pseudo-checkbox {
-  background-color: #fff;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  background: #fff;
+  box-shadow: 0px 0px 0px 2px #000 inset;
 }
 
 .button {
-  color: #fff;
+  color: inherit;
   text-align: center;
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
+  font-family: inherit, sans-serif;
+  font-size: inherit;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   border: 1px solid #fff;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  text-decoration: none;
+  background-color: #545050;
+  outline: none;
 }
 
 .search-form__submit-button {
@@ -203,8 +259,8 @@ ol {
 }
 
 .title {
-  color: #fff;
-  font-family: "Oswald";
+  color: inherit;
+  font-family: "Oswald", sans-serif;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
@@ -218,12 +274,12 @@ ol {
 
 .content__list {
   display: flex;
-  width: 399px;
+  width: 402px;
   height: 298px;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 30px;
+  align-items: center;
   overflow: auto;
+  position: relative;
 }
 
 .content__list::-webkit-scrollbar {
@@ -233,27 +289,51 @@ ol {
 
 .content__list-item {
   display: flex;
-  width: 398px;
   align-items: flex-start;
+  width: 399px;
+  height: 107px;
   flex-direction: row;
+  padding: 2px;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.content__list-item:active {
+  background-color: #545050;
+}
+
+.content__list-item:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 0;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__card-link {
-  color: #fff;
+  display: block;
+  color: inherit;
   text-decoration: none;
 }
 
+.content__card-link:focus {
+  outline: none;
+}
+
 .content__video-card {
-  display: flex;
-  width: 398px;
-  padding: 2px;
+  display: inline-flex;
   align-items: flex-start;
+  width: 395px;
+  height: 103px;
   flex-direction: row;
 }
 
 .content__video-card-thumbnail {
   width: 194px;
-  height: 103px;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -261,13 +341,14 @@ ol {
 .content__video-card-description-container {
   display: flex;
   width: 100%;
-  flex-direction: column;
+  height: 103px;
   align-items: flex-start;
+  flex-direction: column;
   gap: 6px;
 }
 
 .content__video-card-title {
-  font-family: "Oswald";
+  font-family: "Oswald", sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
@@ -275,12 +356,20 @@ ol {
   text-transform: uppercase;
 }
 
+.content__video-card-title:hover {
+  text-decoration: underline;
+}
+
 .content__video-card-description {
-  font-family: Fira Sans Condensed;
-  font-size: 18px;
+  font-family: inherit, sans-serif;
+  font-size: inherit;
   font-style: normal;
   font-weight: 400;
   line-height: 16.2px;
+}
+
+.content__video-card-description:hover {
+  text-decoration: underline;
 }
 
 .content__video-card-thumbnail {
@@ -299,22 +388,4 @@ ol {
   width: 399px;
   height: 34px;
   background-color: transparent;
-}
-
-.preloader-template {
-  width: 711px;
-  height: 386px;
-  background-color: aqua;
-}
-
-.preloader {
-  display: flex;
-  width: 711px;
-  height: 386px;
-  position: fixed;
-  z-index: 3;
-  align-items: center;
-  justify-content: center;
-  margin-top: 212px;
-  margin-left: 30px;
 }
