--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,7 @@ ol {
   align-items: flex-end;
   width: 100%;
   gap: 30px;
+  padding: 133px 30px;
   flex-direction: row;
 }
 
@@ -73,6 +74,7 @@ ol {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -92,7 +94,7 @@ ol {
 
 .search-form__fieldset-title {
   color: inherit;
-  font-family: inherit, sans-serif;
+  font-family: inherit;
   font-size: inherit;
   font-style: normal;
   font-weight: 400;
@@ -111,9 +113,13 @@ ol {
   outline-offset: 1px;
 }
 
+.search-form__checkbox-list .search-form__label:hover {
+  text-decoration: underline;
+}
+
 .search-form__label-text {
   color: inherit;
-  font-family: inherit, sans-serif;
+  font-family: inherit;
   font-size: inherit;
   font-style: normal;
   font-weight: 400;
@@ -131,7 +137,7 @@ ol {
   padding-top: 2px;
   padding-bottom: 2px;
   color: inherit;
-  font-family: inherit, sans-serif;
+  font-family: inherit;
   font-size: inherit;
   font-style: normal;
   font-weight: 400;
@@ -174,10 +180,6 @@ ol {
   gap: 15px;
 }
 
-.search-form__checkbox-list:hover {
-  text-decoration: underline;
-}
-
 .search-form__checkbox + .search-form__pseudo-checkbox {
   width: 19px;
   height: 19px;
@@ -211,7 +213,7 @@ ol {
 .button {
   color: inherit;
   text-align: center;
-  font-family: inherit, sans-serif;
+  font-family: inherit;
   font-size: inherit;
   font-style: normal;
   font-weight: 700;
@@ -290,10 +292,9 @@ ol {
 .content__list-item {
   display: flex;
   align-items: flex-start;
-  width: 399px;
+  width: 400px;
   height: 107px;
   flex-direction: row;
-  padding: 2px;
 }
 
 .content__list-item:not(:last-child) {
@@ -309,14 +310,15 @@ ol {
   outline-offset: 0;
 }
 
-.content__card-link_current {
-  background-color: #545050;
-}
-
 .content__card-link {
   display: block;
   color: inherit;
   text-decoration: none;
+  padding: 2px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__card-link:focus {
@@ -326,22 +328,27 @@ ol {
 .content__video-card {
   display: inline-flex;
   align-items: flex-start;
-  width: 395px;
+  width: 396px;
   height: 103px;
+  gap: 4px;
   flex-direction: row;
 }
 
+.content__video-card:hover {
+  text-decoration: underline;
+}
+
 .content__video-card-thumbnail {
-  width: 194px;
+  width: 100%;
   height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card-description-container {
   display: flex;
   width: 100%;
-  height: 103px;
+  height: 100%;
   align-items: flex-start;
   flex-direction: column;
   gap: 6px;
@@ -354,27 +361,15 @@ ol {
   font-weight: 700;
   line-height: 100%;
   text-transform: uppercase;
-}
-
-.content__video-card-title:hover {
-  text-decoration: underline;
+  letter-spacing: -0.3px;
 }
 
 .content__video-card-description {
-  font-family: inherit, sans-serif;
+  font-family: inherit;
   font-size: inherit;
   font-style: normal;
   font-weight: 400;
   line-height: 16.2px;
-}
-
-.content__video-card-description:hover {
-  text-decoration: underline;
-}
-
-.content__video-card-thumbnail {
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .more-button-template {
